# splitics

./: .gitignore  Claude.md  Plan.md  pyproject.toml  splitics.py
.claude/: settings.json
.claude/hooks/: run-tests.sh
.github/workflows/: warp-comment-assistant.yml  warp-pr-review.yml
tests/: __init__.py  test_parse_size.py  test_split.py
tests/fixtures/: malformed.ics  medium.ics  simple.ics
