[project]
name = "splitics"
version = "1.0.0"
description = "Split large ICS calendar files into smaller chunks"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.10"
authors = [
    { name = "Michele Ippolito", email = "m.ippolito@outlook.com" }
]
keywords = ["ics", "calendar", "split", "google-calendar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
